<resources>
    <string name="app_name">ERIC-SUMMER2023</string>
    <string name="enter_your_password">Enter Your Password\n</string>
    <string name="enterremail">Enter Your Email</string>
    <string name="login">Login</string>
    <string name="password">Password\n</string>
    <string name="signup">Signup\n</string>
    <string name="full_name">Full Name</string>
    <string name="retype_password">Retype Password\n</string>
    <string name="email">Email</string>
    <string name="if_already_registered_press_here">If Already Registered, Press Here!</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search_currency">Search Currency</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="f">f</string>
    <string name="transactions">Transactions</string>
    <string name="total_balance">Total Balance</string>
    <string name="select_a_letter">Select a Letter</string>
    <string name="submit">Submit</string>
</resources>